feat: 添加修改密码方法，重置密码优化